2000-11-17  Kevin Buettner  <kevinb@redhat.com>

	* rs6000-tdep.c (refine_prologue_limit): New function.
	(skip_prologue): When zero, attempt to obtain value for
	lim_pc by calling refine_prologue_limit().  Also, fix
	fencepost error regarding the limit in the loop.

	From Peter Schauer:
	* rs6000-tdep.c (skip_prologue):  Handle optimizer code motions into
	the prologue by continuing the prologue search, if we have no valid
	frame yet or if the return address is not yet saved in the frame.

2000-11-17  Kevin Buettner  <kevinb@redhat.com>

	* wrapper.c (gdb_value_assign, wrap_value_assign): Protoize.

2000-11-16  Christopher Faylor  <cgf@redhat.com>

	* thread.c (thread_apply_all_command): Save the command before
	executing it because it may be modified.  Restore the saved command so
	that the same command is executed on next thread.
	(thread_apply_command): Same correction.

2000-11-16  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* regcache.c (read_register_bytes): Failing to set register_valid
	is not necessarily an error, if the register is a pseudo-register.
	Some pseudo-registers are never marked as valid, so that they will
	be read anew every time.  Determining if a pseudo-register is valid
	(or should be marked invalid) may be difficult, whereas just 
	recomputing it may be cheap.

Thu Nov 16 09:47:57 2000  David Taylor  <taylor@redhat.com>

	* tracepoint.c (trace_find_tracepoint_command): Replace call to
	parse_and_eval_address with a call to parse_and_eval_long as
	we are evaluating an integer, not an address.
	* top.c (show_commands): Ditto.

2000-11-15  Kevin Buettner  <kevinb@redhat.com>

	* xcoffread.c (arrange_linetable, xcoff_initial_scan): Protoize.

Wed Nov 15 09:31:39 2000  David Taylor  <taylor@redhat.com>

	* utils.c (strlen_paddr, paddr, paddr_nz): Use TARGET_ADDR_BIT,
	not TARGET_PTR_BIT, since we are dealing with addresses, not
	pointers.
	
2000-11-14  Daniel Berlin  <dberlin@redhat.com>

	From Kenneth Block <kenneth.block@compaq.com>
